fixed overlap issues of overlap with avatar and other things in profile panel

--- a/discord_themes/addons/alky_CV_addons.css
+++ b/discord_themes/addons/alky_CV_addons.css
@@ -1410,6 +1410,35 @@ foreignObject[mask="url(#svg-mask-status-streaming)"] div{
     width: 92px;
     height: 92px
 }
+aside.profilePanel-2PWEok{
+    width: calc(0.85*var(--profile-popout-width));
+    /*profile panel width to match user popout width*/
+}
+aside.profilePanel-2PWEok .userPanelOuter-xc-WYi .bannerSVGWrapper-qc0szY .banner-2boKnS{
+    width: min(calc(0.85*var(--profile-popout-width)), 100%);
+    /*banner width based on profile panel width*/
+}
+aside.profilePanel-2PWEok .userPanelOuter-xc-WYi .badgelistGroup-2XjSQi{
+    position: relative;
+}
+aside.profilePanel-2PWEok .userPanelOuter-xc-WYi .badgelistGroup-2XjSQi,
+aside.profilePanel-2PWEok .userPanelOverlayBackground-3xwDMp.overlayBackground-1KgwVi{
+    top: calc(0.9*var(--profile-popout-picture-size, 80px) - 75px);
+    /*adjust position of info and badge panels to not overlap with avatar*/
+}
+aside.profilePanel-2PWEok{
+    padding-top: 10px;
+    padding-right: 10px;
+    /*gives white space on top and right edges of profile panel*/
+}
+aside.profilePanel-2PWEok .userPanelOuter-xc-WYi .bannerSVGWrapper-qc0szY .banner-2boKnS{
+    border-radius: 8px 8px 0 0;
+    /*rounds top corners of profile panel*/
+}
+aside.profilePanel-2PWEok .avatarPositionPanel-3P4Ted{
+    left: max(calc(50% - 0.55*var(--profile-popout-picture-size, 80px)), 10px);
+    /*keeps avatar in center of profile panel*/
+}
 /*-----CREDIT CARD INFO-----*/
 .input-2g-os5[placeholder="Coolsville"]::placeholder,
 .input-2g-os5[placeholder="123 Discord Drive"]+div .text-xs-normal-3SiVjE,
